exports[`Pagination should render 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor={undefined}
    onSelect={null}>
    Show:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      5
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
  <div
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-btn btn-group"
    onSelect={null}>
    <button
      className="btn btn-link"
      disabled={true}
      id={undefined}
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-backward"
        title={null} />
    </button>
    <button
      className="btn btn-link tc-pagination-ctrl-prev btn btn-link tc-pagination-ctrl-prev-default"
      disabled={true}
      id={undefined}
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </button>
    <span
      className="btn btn-link">
      1
      /
      4
    </span>
    <button
      className="btn btn-link"
      disabled={false}
      id={undefined}
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </button>
    <button
      className="btn btn-link"
      disabled={false}
      id={undefined}
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-forward"
        title={null} />
    </button>
  </div>
</ul>
`;

exports[`Pagination should render id if provided 1`] = `
<ul
  className="nav"
  role={null}>
  <label
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-text"
    htmlFor="toolbar-pagination-size"
    onSelect={null}>
    Show:
  </label>
  <li
    className="dropdown"
    style={undefined}>
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle"
      href=""
      id="toolbar-pagination-size"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button">
      5
       
      <span
        className="caret" />
    </a>
    <ul
      aria-labelledby="toolbar-pagination-size"
      className="dropdown-menu"
      role="menu">
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          5
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          10
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          20
        </a>
      </li>
      <li
        className=""
        role="presentation"
        style={undefined}>
        <a
          href=""
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1">
          50
        </a>
      </li>
    </ul>
  </li>
  <div
    active={undefined}
    activeHref={undefined}
    activeKey={undefined}
    className="navbar-btn btn-group"
    onSelect={null}>
    <button
      className="btn btn-link"
      disabled={true}
      id="toolbar-nav-to-first"
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-backward"
        title={null} />
    </button>
    <button
      className="btn btn-link tc-pagination-ctrl-prev btn btn-link tc-pagination-ctrl-prev-default"
      disabled={true}
      id="toolbar-nav-to-prev"
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </button>
    <span
      className="btn btn-link">
      1
      /
      4
    </span>
    <button
      className="btn btn-link"
      disabled={false}
      id="toolbar-nav-to-next"
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-play"
        title={null} />
    </button>
    <button
      className="btn btn-link"
      disabled={false}
      id="toolbar-nav-to-last"
      onClick={[Function]}
      type="button">
      <i
        aria-hidden="true"
        className="fa fa-forward"
        title={null} />
    </button>
  </div>
</ul>
`;
